Ajout du CSRF Token pour le formulaire de changement de mot de passe

--- a/auf_savoirs_en_partage/templates/chercheurs/password_change_form.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/password_change_form.html
@@ -3,7 +3,7 @@
 {% block contenu %}
 <div class="cadre">
     <h1>Changement de mot de passe</h1>
-    <form method="post">
+	<form method="post">{% csrf_token %}
         {% include "table_form.html" %}
         <input type="submit" name="Submit" value="Envoyer" class="bouton" />
     </form>
